# nccl_harness

./: .gitignore  Cargo.toml  README.md
scripts/: hostfile  run-aws-scaling.sh  run-aws.sh  run.sh  test-scaling.sh  test.sh
src/: main.rs  parse.rs  util.rs  wrapper.rs
