[package]
name = "nccl_harness"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no_check_paths = []

[profile.release]
opt-level = 3

[dependencies]
polars = { version = "0.38.2", features = ["polars-io"] }
regex = "1.10.3"
env_logger = "0.11.3"
log = "0.4.21"
termion = "3.0.0"
prettytable = "0.10.0"
